--- a/index.html
+++ b/index.html
@@ -8,133 +8,143 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>The Beatles Community</title>
   </head>
   <body>
-	</-bagian nacbar>
-   <nav class="navbar navbar-expand-lg navbar-light bg-primary fixed-top">
-   <div class="container">
-  <a class="navbar-brand" href="#">Polinema</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+   
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <a class="navbar-brand" href="#">The Beatles Community</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#Home">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">about</a>
+        <a class="nav-link" href="#Gallery">Gallery</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Galerry</a>
+        <a class="nav-link" href="#Album">Album</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Contact Us</a>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Song
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="#Yesterday">Yesterday</a>
+          
+        </div>
       </li>
     </ul>
   </div>
 </nav>
-<div class="jumbotron jumbotron-fluid">
- <div class="container text-center">
-  <img alt="logo" src="PSDKU.png"  width="30%" />
-  <font face="jokerman">
-    <h1 class="display-4">PSDKU KEDIRI </h1>
-	</font>
-	<font face="Chiller">
-    <p class="lead">Selamat Datang di POLINEMA PSDKU Kota KEDIRI</p>
-	</font>
+
+<div class="jumbotron jumbotron-fluid bg-danger mb-0 " style="background-image:url(background.jpg);">
+  <div class="container text-center rounded-sm">
+	<img src="logo.jpg" width="30%" class="rounded-circle shadow-lg p-2 mb-5 bg-white rounded">
+    <font face="Ultra Fresh - D">
+	<h1 class="display-4 text-light font-weight-bolder " style="text-shadow:0 0 3px black, 0 0 5px black;">The Beatles Community</h1>
+    </font>
+	<p class="lead font-italic text-light font-weight-bolder" style="text-shadow:0 0 3px black, 0 0 5px black;">Take a sad song and make it better.</p>
   </div>
 </div>
-<div class="container text-center">
- <font face="jokerman">
-<h1> ABOUT </h1>
-</font>
-</div>
-<div class="container text-center">
-  <div class="row">
-    <div class="col-sm" align="justify">
-    Politeknik Negeri Malang awalnya bernama Politeknik Universitas Brawijaya,  berdiri pada tahun 1982 berdasarkan Surat Keputusan Presiden No. 59/Tahun 1982.Politeknik Universitas Brawijaya berkedudukan di Kota Malang,
+
+<span id="Gallery"></span>
+
+<div id="carouselExampleIndicators" class="carousel slide text-center bg-dark mb-5 pb-5" data-ride="carousel">
+  <h1 class="mb-5 pt-5 text-light"><i>Gallery</i></h1>
+
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="slide1.jpg" class="d-inline w-50" alt="...">
     </div>
-    <div class="col-sm" align="justify">
-      Provinsi Jawa Timur dan merupakan salah satu dari 6 Politeknik perintis berdasarkan Surat Keputusan Direktur Jenderal Pendidikan Tinggi No.115/DIKTI/KEP/1984. Perubahan nama Politeknik Universitas Brawijaya menjadi Politeknik Negeri Malang (POLINEMA)
+    <div class="carousel-item">
+      <img src="slide2.jpg" class="d-inline w-50" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="slide3.jpg" class="d-inline w-50" alt="...">
     </div>
   </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
+
+<span id="Album"></span>
 <div class="container text-center">
-<font face="jokerman">
-<h1> Galerry </h1>
-</font>
-</div>
-<div class="container">
-  <div class="row">
+  <h1 class="mb-5"><i>Album</i></h1>
+  <div class="row mb-5">
     <div class="col-sm">
       <div class="card" style="width: 18rem;">
-  <img src="b.jpg" class="card-img-top" alt="...">
+  <img src="second.jpg" class="card-img-top" alt="...">
   <div class="card-body">
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <p class="card-text">The Second Beatles Album adalah album Capitol Records kedua oleh band rock Inggris The Beatles, dan album ketiga mereka dirilis di Amerika Serikat termasuk Introducing ...
+	The Beatles, yang dikeluarkan tiga bulan sebelumnya oleh Vee-Jay Records.</p>
   </div>
 </div>
     </div>
     <div class="col-sm">
      <div class="card" style="width: 18rem;">
-  <img src="a.jpg" class="card-img-top" alt="...">
+  <img src="hard.jpg" class="card-img-top" alt="...">
   <div class="card-body">
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <p class="card-text">A Hard Day's Night adalah album studio ketiga oleh band rock Inggris The Beatles, dirilis pada 10 Juli 1964, 
+	dengan sampingan satu berisi lagu-lagu dari soundtrack ke film mereka dengan nama yang sama.</p>
   </div>
 </div>
     </div>
     <div class="col-sm">
       <div class="card" style="width: 18rem;">
-  <img src="c.png" class="card-img-top" alt="...">
+  <img src="revolver.jpg" class="card-img-top" alt="...">
   <div class="card-body">
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <p class="card-text">Revolver is the seventh studio album by the English rock band the Beatles. 
+	It was released on 5 August 1966, accompanied by the double A-side single "Eleanor Rigby" / "Yellow Submarine".</p>
   </div>
 </div>
     </div>
   </div>
+  
 </div>
-<div class="container text-center">
-<font face="jokerman">
-<h1> Contact Us </h1>
-</font>
+
+<span id="Yesterday"></span>
+<div class="container text-center mb-5">
+<h1 class="mb-5"><i>Song</i></h1>
+
+<h3>The Beatles - Yesterday</h3>
+</br>
+Yesterday,</br>
+All my troubles seemed so far away,</br>
+Now it looks as though they're here to stay,</br>
+Oh, I believe in yesterday.</br>
+Suddenly,I'm not half the man I used to be,</br>
+There's a shadow hanging over me,</br>
+Oh, yesterday came suddenly.</br>
+Why she Had to go I don't know, she wouldn't say.</br>
+I said,Something wrong, now I long for yesterday.</br>
+Yesterday,Love was such an easy game to play,</br>
+Now I need a place to hide away,Oh, </br>
+I believe in yesterday.</br>
+Why sheHad to go I don't know, she wouldn't say.</br>
+I said,Something wrong, now I long for yesterday.</br>
+Yesterday,</br>
+Love was such an easy game to play,</br>
+Now I need a place to hide away,</br>
+Oh, I believe in yesterday.</br>
+Mm-mm-mm-mm-mm-mm-mm.</br>
+
 </div>
-<div class="container">
-  <div class="row">
-    <div class="col-4">
-     <div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-title">Alamat</h5>
-	<br>
-    <h6 class="card-subtitle mb-2 text-muted">Jl.maskumambang...   </h6>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="card-link">Card link</a>
-    <a href="#" class="card-link">Another link</a>
-  </div>
-</div>
-</div>
-    <div class="col-8">
-      <form>
-  <div class="form-group">
-    <label for="formGroupExampleInput">Nama</label>
-    <input type="text" class="form-control" id="nama" placeholder="jenengan isi teng mriki">
-  </div>
-  <div class="form-group">
-    <label for="formGroupExampleInput2">Email</label>
-    <input type="text" class="form-control" id="Email" placeholder="jenengan isi teng mriki">
-  </div>
-  <div class="form-group">
-    <label for="formGroupExampleInput2">Pesan</label>
-    <textarea name="pesan" class="form-control" id="pesan" ></textarea>
-  </div>
-   <div class="form-group">
-    <button type="button" class="btn btn-secondary" >Kirim</button>
-  </div>
-</form>
-    </div>
-  </div>
-</div>
-<footer class="bg-primary text-while pt-3">
+<footer class="bg-dark text-light text-while pt-3">
 <div class ="container">
 <div class="row">
 <div class="col text-center">
@@ -142,6 +152,7 @@
 </div>
 </div>
 </footer>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
